client/src/views/learn/articles.css
.flex {
    display: flex;
    flex-direction: row;


}

.left {
    height: 94.9vh;
    width: 100%;
    flex: 1;
    padding: 0;
}

.right {
    height: 94.9vh;
    width: 100%;
    flex: 3;
}

.test {
    /* background-color: red;  */
    margin-bottom: 5px;
    margin-top: 5px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    padding-left: 10px;
}

